# mcp-lab

./: .gitignore  README.md  build.sh
compose/: compose.yml
docker/: base.Dockerfile
stages/stage0_hello/: README.md  pyproject.toml
stages/stage0_hello/src/client/: client.py
stages/stage0_hello/src/server/: server.py
